--- a/model_definitions/03c9a01f-bd46-4e7c-9a60-4282039094e6/DOCKER_GENERIC_RAW/config.json
+++ b/model_definitions/03c9a01f-bd46-4e7c-9a60-4282039094e6/DOCKER_GENERIC_RAW/config.json
@@ -1,8 +1,8 @@
 {
   "resources": {
     "requests": {
-      "cpu": "10m",
-      "memory": "50m"
+      "cpu": "200m",
+      "memory": "100Mi"
     }
   }
 }
