--- a/model_definitions/74eca506-e967-48f1-92ad-fb217b07e181/DOCKER_GENERIC_RAW/config.json
+++ b/model_definitions/74eca506-e967-48f1-92ad-fb217b07e181/DOCKER_GENERIC_RAW/config.json
@@ -8,5 +8,12 @@
         "kernel_size": 3,
         "hidden_dims": 250,
         "epochs": 1
+    },
+
+    "resources": {
+        "limits": {
+            "cpu": "1",
+            "memory": "2048Mi"
+        }
     }
 }
