improve xgboost example and add notebook

--- a/model_definitions/03c9a01f-bd46-4e7c-9a60-4282039094e6/DOCKER_GENERIC_RAW/config.json
+++ b/model_definitions/03c9a01f-bd46-4e7c-9a60-4282039094e6/DOCKER_GENERIC_RAW/config.json
@@ -1,8 +1,14 @@
 {
-  "resources": {
-    "requests": {
-      "cpu": "200m",
-      "memory": "100Mi"
-    }
-  }
+
+	"hyperparameters": {
+		"eta": 0.2,
+		"max_depth": 6
+	},
+
+	"resources": {
+		"requests": {
+			"cpu": "200m",
+			"memory": "100Mi"
+		}
+	}
 }
