--- a/model_definitions/03c9a01f-bd46-4e7c-9a60-4282039094e6/model_modules/requirements.txt
+++ b/model_definitions/03c9a01f-bd46-4e7c-9a60-4282039094e6/model_modules/requirements.txt
@@ -1,6 +1,6 @@
-numpy==1.16.1
-pandas==0.24.2
 xgboost==0.90
-scikit-learn==0.22.2
-shap==0.36.0
+scikit-learn>=0.22.2
+shap>=0.36.0
 matplotlib>=2.2.2
+teradataml>=17.0.0.0
+nyoka>=4.3.0
