issue #64 update pyspark model to use xgboost

--- a/model_definitions/149e31ed-c554-46b4-95d2-00c5c43320fb/config.json
+++ b/model_definitions/149e31ed-c554-46b4-95d2-00c5c43320fb/config.json
@@ -1,8 +1,6 @@
 {
-
   "hyperParameters": {
-    "maxIter": 10,
-    "regParam": 0.3,
-    "elasticNetParam": 0.8
+    "eta": 0.2,
+    "max_depth": 6
   }
 }
