--- a/model_definitions/b1e18b12-5ccd-4c94-b96b-c2cebf230150/config.json
+++ b/model_definitions/b1e18b12-5ccd-4c94-b96b-c2cebf230150/config.json
@@ -1,5 +1,6 @@
 {
-  "hyperParameters": {
-    "n_neighbors": 3
-  }
+    "hyperParameters": {
+        "rand_seed": 111,
+        "n_estimators": 100
+    }
 }
