--- a/model_definitions/b1e18b12-5ccd-4c94-b96b-c2cebf230150/model_modules/requirements.txt
+++ b/model_definitions/b1e18b12-5ccd-4c94-b96b-c2cebf230150/model_modules/requirements.txt
@@ -1,8 +1,6 @@
-xgboost==0.90
-scikit-learn==0.22.2
+scikit-learn==0.24.2
+sklearn2pmml==0.72.0
 shap==0.36.0
 matplotlib>=2.2.2
 teradataml>=17.0.0.3
-nyoka>=4.3.0
 aoa>=4.0
-tdextensions
