updated config.json with actual hyperparams

--- a/model_definitions/db62c97c-2cd5-4f4e-af3c-b967c13d0327/config.json
+++ b/model_definitions/db62c97c-2cd5-4f4e-af3c-b967c13d0327/config.json
@@ -1,5 +1,7 @@
 {
   "hyperParameters": {
-    "sampleParam": 1
+      "entrance_criterion": 3.84
+      "use_fstat": True
+      "use_pstat": False      
   }
 }
