more bugs fixed in training.py

--- a/model_definitions/db62c97c-2cd5-4f4e-af3c-b967c13d0327/config.json
+++ b/model_definitions/db62c97c-2cd5-4f4e-af3c-b967c13d0327/config.json
@@ -2,6 +2,6 @@
   "hyperParameters": {
       "entrance_criterion": 3.84,
       "use_fstat": true,
-      "use_pstat": false      
+      "use_pvalue": false      
   }
 }
