--- a/model_definitions/db62c97c-2cd5-4f4e-af3c-b967c13d0327/config.json
+++ b/model_definitions/db62c97c-2cd5-4f4e-af3c-b967c13d0327/config.json
@@ -1,6 +1,7 @@
 {
     "hyperParameters": {
         "entrance_criterion": 3.84,
+        "stepwise": false,
         "use_fstat": true,
         "use_pvalue": false
     }
