--- a/model_definitions/03c9a01f-bd46-4e7c-9a60-4282039094e6/model_modules/requirements.txt
+++ b/model_definitions/03c9a01f-bd46-4e7c-9a60-4282039094e6/model_modules/requirements.txt
@@ -2,6 +2,6 @@ xgboost==0.90
 scikit-learn==0.22.2
 shap==0.36.0
 matplotlib>=2.2.2
-teradataml>=17.0.0.2
+teradataml>=17.0.0.4
 nyoka>=4.3.0
-aoa==4.1.13
+aoa>=5.0.0rc1
