--- a/model_definitions/python-diabetes/model_modules/requirements.txt
+++ b/model_definitions/python-diabetes/model_modules/requirements.txt
@@ -1,7 +1,9 @@
+numpy==1.19.5
+pandas==1.1.5
 xgboost==0.90
 scikit-learn==0.24.2
 shap==0.36.0
 matplotlib==3.3.1
-teradataml>=17.0.0.4
-nyoka>=4.3.0
+teradataml==17.0.0.4
+nyoka==4.3.0
 aoa==6.0.0
